# PIDBmp

./: Bitmap.cpp  Bitmap.h  BitmapImage.cpp  BitmapImage.h  CMakeLists.txt  ColorPallete.cpp  ColorPallete.h  FileHeader.cpp  FileHeader.h  InfoHeader.cpp  InfoHeader.h  Point.cpp  Point.h  RGBColor.cpp  RGBColor.h  helpers.cpp  main.cpp
